# efr32mg1-bluetooth-template

./: CMakeLists.txt  LICENSE.md  efr32mg1p.ld  flash.jlink  reset.jlink
bgbuild/: gatt.xml
common/: Clock4D.h  Display47.h  array_cast.hpp  reversed.hpp  singleton.hpp  sorted.hpp
common/emlib/: SimpleGPIO.h
src/: GeckoConfiguration.c  GeckoConfiguration.h  InitDevice.c  InitDevice.h  main.cpp
